changed logo padding to fix cut off on small screens

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -173,6 +173,7 @@ body * {
     list-style-type: none;
     margin: 1rem;
     justify-items: flex-end;
+    padding: 2rem;
 }
 
 .nav-link {
